# ChangeLog for net-misc/kanyremote
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  -kanyremote-5.5.ebuild, +kanyremote-5.5.1.ebuild:
  version bump

  18 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  -kanyremote-5.4.1.ebuild, +kanyremote-5.5.ebuild:
  version bump

  09 Dec 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -kanyremote-5.4.ebuild, +kanyremote-5.4.1.ebuild:
  version bump

  21 Oct 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -kanyremote-5.3.ebuild, +kanyremote-5.4.ebuild:
  Version bump

  24 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -kanyremote-5.2.1.ebuild, +kanyremote-5.3.ebuild:
  Version bump to 5.3

  11 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  kanyremote-5.2.1.ebuild:
  Whitespaces

  11 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  +kanyremote-5.2.1.ebuild, +metadata.xml:
  New Ebuild for bug #209689
