@@ -1,4 +1,4 @@
 DIST kanyremote-5.5.1.tar.gz 499796 RMD160 57af500919d90927b5a0fad607438dade594e627 SHA1 5c53e4f8dd47179bbbebd3d8fc9aa6f1374ddd7f SHA256 258c46d54bc4d06e44ad5699d6066b3d51172303c161b0a15316d380ed7beaf5
-EBUILD kanyremote-5.5.1.ebuild 839 RMD160 747754c3d2b4c859532fc928a5448aeb0000b705 SHA1 2f3833e76e12f3d7395044944ce92767d161af14 SHA256 841247c418e3a315c6d0be4b4abb730c7cba8feb1543e7ee2bf22f3690d73a88
-MISC ChangeLog 1039 RMD160 b7d1c30ea2ff2d25f7b536cc6d37ef515f0a3eaf SHA1 af9fdc27b8499599a751bd9b430e207e1ccab58a SHA256 1f0248db947e9f333a5e6d9ee02d795ed43e4e9f634508dfdc53ee213c8611b5
+EBUILD kanyremote-5.5.1.ebuild 861 RMD160 c7d815ecf50ad76b109b89fa90e5580c634be29c SHA1 5e36b426d529645e7ebc113f5870e53de9a996a1 SHA256 8f082b7087764690a9909bedefffa6d48aab25c74ff54c6e9f462e7995493133
+MISC ChangeLog 1188 RMD160 e4c4b046f396ad430a0b00298561b0cd65892b7c SHA1 79b4f22d591d3ad98277501cccc105858ffc16a5 SHA256 c9c261cfad86c46e282de039902116ad0682f2ee64be7f35bff4dd3306355eec
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
