@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -13,9 +13,10 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-DEPEND=" >=net-misc/anyremote-4.4
+DEPEND=">=net-misc/anyremote-4.4
 	 >=dev-python/PyQt-3.17
 	 >=dev-python/pykde-3.16"
+RDEPEND="${DEPEND}"
 
 src_install() {
 	emake install DESTDIR="${D}" || die "emake install failed"
@@ -25,9 +26,9 @@ src_install() {
 
 pkg_postinst() {
 	if ! built_with_use net-misc/anyremote bluetooth ; then
-		elog
-		elog "If you want to use bluetooth with kanyremote, you need to"
-		elog "compile net-misc/anyremote with bluetooth use flag."
+		einfo
+		einfo "If you want to use bluetooth with kanyremote, you need to"
+		einfo "compile net-misc/anyremote with bluetooth use flag."
 	fi
 }
 
