@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/kanyremote
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
+  kanyremote-5.5.1.ebuild:
+  Add suggested RDEPEND=${DEPEND}, elog replaced by einfo.
 
   21 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
   -kanyremote-5.5.ebuild, +kanyremote-5.5.1.ebuild:
